--- a/Projects/Oppgave 29 April/index.html
+++ b/Projects/Oppgave 29 April/index.html
@@ -40,7 +40,13 @@
         </nav>
 
         <section>
-            <div class="card"></div>
+            <div class="card">
+                <img src="img_avatar.png" alt="avatar" style="width:35%;">
+                <div class="container">
+                    <h4> <B>Bob Ross</B> </h4>
+                    <p>Manager at Flexbox</p>
+                    </div>
+                     </div>
         </section>
 
         </body>
