Change name on the manager

--- a/Projects/Oppgave 29 April/index.html
+++ b/Projects/Oppgave 29 April/index.html
@@ -43,7 +43,7 @@
             <div class="card">
                 <img src="img_avatar.png" alt="avatar" style="width:35%;">
                 <div class="container">
-                    <h4> <B>Bob Ross</B> </h4>
+                    <h4> <B>John Flex</B> </h4>
                     <p>Manager at Flexbox</p>
                     </div>
                      </div>
